[tool.poetry]
name = "trunco"
version = "0.2.1"
description = "An agile, powerful Python framework for creating dynamic UIs with seamless web integration."
authors = ["Ali Tavallaie <a.tavallaie@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
